# MyLogger

./: CMakeLists.txt  README.md  prebuild.sh
src/: MyLogger.cpp  MyLogger.h
test/: CMakeLists.txt  main.cpp
